<resources>
    <string name="app_name">SongNote</string>
    <string name="add_song_button">Добавить новую песню</string>
    <string name="song_name">Название песни</string>
    <string name="song_author">Автор</string>
    <string name="song_link">Ссылка на аккорды</string>
    <string name="submit_button">Подтвердить</string>
    <string name="back">Назад</string>
    <string name="updateSongButton">Обновить</string>
    <string name="deleteSongButton">Удалить</string>
</resources>